# gait-skeleton-visualization

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: marker_sets.yaml
data/: fast_gait.csv  realistic_gait.csv  sample_exaggerated.csv  sample_lower_body.csv  sample_simple.csv  sample_treadmill.csv  sample_walking.csv  slow_gait.csv
docs/: segment_extraction_experiments.md
scripts/: __init__.py  batch_lstm_preprocessing.py  convert_to_gif.py  generate_realistic_gait.py  generate_sample_data.py  generate_wiki_figures.py  lstm_preprocessing_pipeline.py  visualize_aligned_segments.py  visualize_extracted_segments.py  visualize_processing_summary.py
scripts/experiments/: apply_adaptive_correction.py  apply_balanced_y_correction.py  apply_optimal_correction.py  apply_segment_pca_correction.py  apply_strong_y_correction.py  apply_v7_correction.py  apply_v7_tuned.py  compare_both_datasets.py  compare_correction_methods.py  compare_preprocessing_for_lstm.py  compare_raw_vs_preprocessed.py  compare_raw_vs_preprocessed_fair.py  compare_segment_extraction.py  compare_spike_v2.py  compare_spike_vs_threshold.py  compare_with_without_smoothpca.py  plot_corrected_timeseries.py  plot_xy_timeseries.py  run_noise_removal.py
scripts/gait_analysis/: __init__.py  feature_preserving_correction.py  improved_segment_extraction.py  segment_extraction_pipeline.py
scripts/gait_correction/: __init__.py  advanced_correction.py  drift_removal.py  export.py  (+3 more)
src/: __init__.py  data_loader.py  phase_dynamics.py  skeleton_model.py  video_exporter.py  visualizer_2d.py  visualizer_3d.py  visualizer_combined.py
tests/: __init__.py  test_correction_pipeline.py  test_feature_preserving_correction.py  test_pipeline.py  test_segment_extraction.py  test_utils_config.py  test_utils_plotting.py
wiki/: CSV-Data-Format.md  Getting-Started.md  Home.md  Marker-Set-Configuration.md  Noise-Removal.md  Python-API.md  Refactoring-Guide.md  Smooth-PCA.md  Troubleshooting.md  View-Types.md
(+5 files in other folders)
